src/objects/EBC_Request_del__c.object
<CustomObject>
    <description>This object is used to track incoming requests to set up Executive Briefing Meetings from various internal groups at Nimble.</description>
    <fields>
        <fullName>Airfare_Paid_By__c</fullName>
        <label>Airfare Paid By</label>
        <picklist>
            <picklistValues>
                <fullName>Nimble Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Type__c</fullName>
        <label>Attendee Type</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Press/Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Breakfast_enter_time__c</fullName>
        <label>Breakfast (enter time)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Description_Facts__c</fullName>
        <label>Company Description / Facts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Company_Name_Location__c</fullName>
        <label>Company Name &amp; Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition_Nimble_is_Facing_in_Deal__c</fullName>
        <label>Competition Nimble is Facing in Deal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Description_of_Nimble_Lifetime_Purchases__c</fullName>
        <label>Description of Nimble Lifetime Purchases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dinner_Night_Before_After_Meeting__c</fullName>
        <label>Dinner (Night Before / After Meeting)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dinning_Preferences__c</fullName>
        <label>Dinning Preferences/Dietary Restrictions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Going_Out_for_Lunch_enter_time__c</fullName>
        <label>Going Out for Lunch (enter time)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hotel_Paid_for_By__c</fullName>
        <label>Hotel Paid By</label>
        <picklist>
            <picklistValues>
                <fullName>Nimble Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Visitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Cap__c</fullName>
        <label>Market Cap</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_End_Time__c</fullName>
        <label>Meeting End Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Location__c</fullName>
        <label>Meeting Location (Building, City)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Purpose_Desired_Outcome__c</fullName>
        <label>Meeting Purpose &amp; Desired Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Meeting_Room_Name__c</fullName>
        <label>Meeting Room Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Time__c</fullName>
        <label>Meeting Start Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Help_with_Dinner_Reservation__c</fullName>
        <label>Need Help with Dinner Reservation?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Need_Help_with_Travel_Arrangements__c</fullName>
        <label>Do Attendees Need Help with Travel?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Meeting_Date__c</fullName>
        <label>Preferred Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity (if available)</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>EBC Requests</relationshipLabel>
        <relationshipName>EBC_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Nimble_Employees__c</fullName>
        <label>Requested Nimble Employees</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Snacks_enter_time__c</fullName>
        <label>Snacks (enter time)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_of_Buying_Process__c</fullName>
        <label>Stage of Buying Process</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ticker_Symbol__c</fullName>
        <label>Ticker Symbol</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Customer_Storage_Problems__c</fullName>
        <label>Top Customer Storage Problems</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Topics_of_Primary_Interest_to_Visitor__c</fullName>
        <label>Topics of Primary Interest to Visitor</label>
        <picklist>
            <picklistValues>
                <fullName>Hybrid Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applications: MS Exchange,SQL,SharePoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Center Growth and Efficiency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtualization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VDI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Protection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Data Base Applications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartStack Architectures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CASL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage on Demand (SoD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Defined Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Visitors_Name_Titles__c</fullName>
        <label>Visitors (Name &amp; Titles)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Working_Lunch_Delivered_enter_time__c</fullName>
        <label>Working Lunch, Delivered (enter time)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_Corporate_Product_Overview__c</fullName>
        <label>1. Corporate/Product Introduction</label>
        <picklist>
            <picklistValues>
                <fullName>High Level Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer More Detailed Deep Dive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip It - Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other [see presentation notes below]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1_Minutes_Needed_for_Topic__c</fullName>
        <label>1. Minutes Needed for Topic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Requested_Speaker_s_Enter_Names__c</fullName>
        <label>1. Requested Speaker(s) - Enter Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Minutes_Needed_for_Topic__c</fullName>
        <label>2. Minutes Needed for Topic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X2_Requested_Speaker_s_Enter_Names__c</fullName>
        <label>2. Requested Speaker(s) - Enter Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Storage_Technology_Overview__c</fullName>
        <label>2. Storage Technology Overview</label>
        <picklist>
            <picklistValues>
                <fullName>High Level Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer More Detailed Deep Dive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip It - Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other [see presentation notes below]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3_Minutes_Needed_for_Topic__c</fullName>
        <label>3. Minutes Needed for Topic</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3_Requested_Speaker_s_Enter_Names__c</fullName>
        <label>3. Requested Speaker(s) - Enter Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X4_Product_Road_Map__c</fullName>
        <label>4. Product Road Map</label>
        <picklist>
            <picklistValues>
                <fullName>High Level Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer More Detailed Deep Dive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip It - Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other [see presentation notes below]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_Solutions__c</fullName>
        <label>5. Solutions</label>
        <picklist>
            <picklistValues>
                <fullName>High Level Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer More Detailed Deep Dive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip It - Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other [see presentation notes below]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X6_Application__c</fullName>
        <label>6. Applications</label>
        <picklist>
            <picklistValues>
                <fullName>High Level Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer More Detailed Deep Dive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip It - Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other [see presentation notes below]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X7_Channel__c</fullName>
        <label>7. Channel</label>
        <picklist>
            <picklistValues>
                <fullName>High Level Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer More Detailed Deep Dive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip It - Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other [see presentation notes below]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X8_Lab_Tour_15_to_30_Min__c</fullName>
        <label>8. Lab Tour</label>
        <picklist>
            <picklistValues>
                <fullName>15 to 30 Minute Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip It - Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other [see presentation notes below]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X9_Executive_Visits_with__c</fullName>
        <label>9. Executive Visits with</label>
        <picklist>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEO &amp; CFO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Founders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip It - Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other [see presentation notes below]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>x3_Hands_On_Product_Session__c</fullName>
        <label>3. Hands-On Product Session</label>
        <picklist>
            <picklistValues>
                <fullName>High Level Overview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Longer More Detailed Deep Dive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Skip It - Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other [see presentation notes below]</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EBC Request</label>
    <nameField>
        <label>EBC Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EBC Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>